style.css
/* ... */
/* Camera Modal */
.camera-modal {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 2000;
}

.camera-modal-content {
    background-color: #1e1e1e;
    padding: 20px;
    border-radius: 10px;
    text-align: center;
}

#camera-stream {
    width: 100%;
    max-width: 500px;
    border-radius: 8px;
}

#capture-btn,
#close-camera-modal {
    background-color: #4CAF50;
    color: white;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    margin-top: 10px;
}

#close-camera-modal {
    background-color: #f44336;
}

.toggle-tag-filters-btn {
    display: none; /* Oculto por defecto */
    font-size: .85rem;
    color: #fff;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    max-width: 200px;
    text-decoration: underline;
}

/* Media queries para responsividad */
@media (max-width: 992px) {
    .chat-container {
        width: 100%;
        height: 100vh;
        border-radius: 0;
    }
    
    .contacts-list {
        width: 35%;
    }
}

@media (max-width: 768px) {
    .main-content {
        position: relative;
    }

    .contacts-list {
        position: absolute;
        width: 60%;
        height: 100%;
        z-index: 10;
        background-color: #121212;
        transform: translateX(-100%);
        transition: transform .3s ease;
    }
    .contacts-list.show {
        transform: translateX(0);
    }

    .tag-filters {
        display: none; /* Ocultar filtros de etiquetas por defecto en móvil */
    }

    .tag-filters.show {
        display: flex; /* Mostrar cuando la clase .show está presente */
    }

    .toggle-tag-filters-btn {
        display: block; /* Mostrar el botón en móvil */
    }
    
    .toggle-contacts {
        display: block;
    }

    .bot-config-modal .modal-content {
        width: 95%;
        margin: 10px;
    }
    .bot-toggle {
        align-self: flex-end;
    }
    .bot-config-button {
        width: 28px;
        height: 28px;
    }
}

@media (max-width: 576px) {
    .chat-header {
        flex-direction: column;
        row-gap: 6px;
    }
    .filters {
        padding: 25px 10px 10px 10px;
        column-gap: 15px;
    }
    .platform-filters {
        gap: 12px;
        flex-grow: 1;
    }
    .item-filter {
        margin-left: 0px;
        gap: 3px;
    }
    .item-filter button {
        padding: 6px 12px;
        font-size: .75em;
    }
    
    .filter {
        font-size: 0.8em;
    }
    .toggle {
        width: 40px;
        height: 20px;
    }
    .slider:before {
        height: 14px;
        width: 14px;
        left: 3px;
        bottom: 3px;
    }
    input:checked + .slider:before {
        transform: translateX(20px);
    }
    
    .platform span {
        display: none;
    }

    .bot-toggle.small {
        flex-direction: column;
        align-items: flex-start;
        gap: 10px; /* Space between tag buttons and bot toggle options */
        align-self: center;
    }
    .bot-toggle-options {
        justify-content: flex-start; /* Align content to the left */
        align-self: center;
    }
    .bot-toggle-options span {
        font-size: 1rem;
    }
    
    .chat-area {
        padding: 10px;
    }
    
    .message-content {
        padding: 8px 12px;
        font-size: 0.9em;
    }
    .message-image {
        max-width: 240px;
        max-height: 170px;
    }

    .contacts-list {
        width: 100%;
    }

    .message-input {
        padding: 12px 15px;
    }

    /* modal */
    .bot-config-modal .modal-body{
        padding: 20px 20px 170px 20px;
    }
    .bot-textarea {
        min-height: 200px;
        font-size: .8em;
    }

    .modal-token-container {
        flex-direction: column-reverse;
        row-gap: 15px;
    }

    .modal-actions {
        flex-direction: column-reverse;
        gap: 10px;
    }

    .modal-button {
        width: 100%;
        padding: 12px;
    }

    .bot-modification h3 {
        font-size: 1em;
    }

    .tag-btn {
        padding: 5px 12px;
        font-size: .75rem;
    }

    /* delete modal */
    .delete-confirmation-modal.show {
        padding: 0px 20px;
    }

    .contact .item-options-menu {
        display: block;
    }
}


/* Estilos para cuando la pantalla está en modo vertical (móvil) */
@media (max-height: 600px) {
    .chat-container {
        height: 100vh;
    }
    
    .filters {
        padding: 5px 10px;
    }
    
    .contact {
        padding: 10px;
    }
    
    .messages {
        padding: 10px 0;
    }
    
    .message-input-container {
        margin-top: 10px;
    }
    
    .message-input {
        padding: 10px 15px;
    }
}

/* Estilos para el menú de tres puntos */
.item-options-menu {
    position: absolute;
    top: 4px;
    right: 2px;
    cursor: pointer;
    padding: 1px 5px;
    display: none;
}

.contact:hover .item-options-menu {
    display: block;
}

.item-options-menu .fas {
    color: #999;
    font-size: 15px;
}

.item-options-menu:hover .fas {
    color: #fff;
}

.options-popup {
    display: none;
    position: absolute;
    right: 100%;
    top: 0;
    background-color: #2a2a2a;
    border: 1px solid #444;
    border-radius: 5px;
    z-index: 10;
    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
}

.options-popup button {
    display: block;
    background: none;
    border: none;
    color: #fff;
    padding: 10px 15px;
    width: 100%;
    text-align: left;
    cursor: pointer;
}

.options-popup button:hover {
    background-color: #333;
}

/* Modal de confirmación para eliminar */
.delete-confirmation-modal {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    z-index: 5000;
    align-items: center;
    justify-content: center;
}
/* ... */

